Fix the button z-index on the project page

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -109,6 +109,7 @@
         .buttons {
           display: flex;
           gap: 20px;
+          z-index: 999;
 
           button {
             border: none;
